Convert Project to Modular Architecture

--- a/UrbanTrafficSimulator/main/pom.xml
+++ b/UrbanTrafficSimulator/main/pom.xml
@@ -17,4 +17,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>fish.payara.extras</groupId>
+            <artifactId>payara-embedded-all</artifactId>
+            <version>6.2024.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>lk.oxo</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
