--- a/UrbanTrafficSimulator/pom.xml
+++ b/UrbanTrafficSimulator/pom.xml
@@ -8,10 +8,32 @@
     <artifactId>UrbanTrafficSimulator</artifactId>
     <version>1.0</version>
 
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>core</module>
+        <module>main</module>
+    </modules>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>lk.oxo</groupId>
+                <artifactId>core</artifactId>
+                <version>1.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>lk.oxo</groupId>
+                <artifactId>main</artifactId>
+                <version>1.0</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
