--- a/UrbanTrafficMonitor/urbanTrafficEAR/pom.xml
+++ b/UrbanTrafficMonitor/urbanTrafficEAR/pom.xml
@@ -38,6 +38,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ear-plugin</artifactId>
                 <version>3.3.0</version>
+                <configuration>
+                    <defaultLibBundleDir>lib</defaultLibBundleDir>
+                </configuration>
             </plugin>
         </plugins>
     </build>
