--- a/UrbanTrafficMonitor/urbanTrafficEJB/pom.xml
+++ b/UrbanTrafficMonitor/urbanTrafficEJB/pom.xml
@@ -25,6 +25,19 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.jms</groupId>
+            <artifactId>jakarta.jms-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>lk.oxo</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
