Send Data to the Server as batch

--- a/UrbanTrafficMonitor/urbanTrafficEJB/pom.xml
+++ b/UrbanTrafficMonitor/urbanTrafficEJB/pom.xml
@@ -38,6 +38,14 @@
             <artifactId>core</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>2.1.1</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -46,6 +54,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ejb-plugin</artifactId>
                 <version>3.2.1</version>
+                <configuration>
+                    <generateClient>true</generateClient>
+                </configuration>
             </plugin>
         </plugins>
     </build>
